# sudoku-rust

./: Cargo.toml  README.md
config/: Input.json  Input2.json
src/sudoku/: lib.rs  sudoku_action.rs  sudoku_elem.rs
src/web/: main.rs
